# cca-cloudshell

./: .gitignore  CHANGELOG.md  LICENSE  README.md  aws_collect.py  azure_collect.py  collect.py  cost_collect.py  gcp_collect.py  m365_collect.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_all.sh  setup.sh
cloudformation/: README.md  cca-collector-role.yaml
config-examples/: README.md  aws-organization.yaml  aws-single-account.yaml  azure.yaml  gcp.yaml  m365.yaml
docs/: PERMISSIONS.md  admin-machine-setup.md  aws-cloudformation.md  getting-started.md  output-formats.md  troubleshooting.md
docs/collectors/: aws.md  azure.md  cost.md  gcp.md  (+1 more)
lib/: __init__.py  __version__.py  change_rate.py  config.py  constants.py  k8s.py  models.py  utils.py
scripts/: generate_assessment_report.py  generate_cost_report.py  generate_m365_report.py  generate_protection_report.py  merge_batch_outputs.py
setup/: README.md  aws-cloudformation-README.md  aws-iam-role.yaml  aws-stackset-member-role.yaml  azure-custom-role.json  gcp-custom-role.yaml  setup-aws-permissions.sh  setup-azure-permissions.sh  setup-gcp-permissions.sh  setup-m365-permissions.sh
tests/: __init__.py  run_tests_and_report.sh  test_aws_collect.py  test_aws_integration.py  test_azure_collect.py  test_change_rate.py  test_cloudshell_compat.py  test_cost_collect.py  test_gcp_collect.py  test_generate_cost_report.py  test_generate_protection_report.py  test_large_scale_aws.py  test_large_scale_azure.py  test_large_scale_gcp.py  test_large_scale_m365.py  test_m365_collect.py  test_utils.py
(+176 files in other folders)
